I added SQLite3 db creation, insertion, and caching functionality to the Data_Wrangler class.

--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "96dc9707",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b84ee8ee",
    "metadata": {},
    "outputs": [],
@@ -42,18 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5cb7d3b9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please unpack the data before trying to read the metadata.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Defining the location of the data\n",
     "data_dir: str = './data/fda_investigations_data.json'\n",
@@ -66,99 +58,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4a82120c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The attributes of the unnested data include:\n",
-      "structure\n",
-      "keys\n",
-      "tables\n",
-      "num_entires\n",
-      "scraped_data\n",
-      "\n",
-      "The scraped data is structured as a dictionary\n",
-      "(dict[str, pd.DataFrame]) with 7 entries. Each\n",
-      "entry key is a table name as a string and each\n",
-      "value is the table data as a pd.DataFrame.\n",
-      "\n",
-      "Keys:\n",
-      "Active Investigations\n",
-      "Closed Investigations 2025\n",
-      "Closed Investigations 2024\n",
-      "Closed Investigations 2023\n",
-      "Closed Investigations 2022\n",
-      "Closed Investigations 2021\n",
-      "Closed Investigations 2020\n",
-      "\n",
-      "Number of entries: 7\n",
-      "\n",
-      "Here is the first table:\n",
-      "Columns:\n",
-      "DatePosted\n",
-      "Reference#\n",
-      "PathogenorCause ofIllness\n",
-      "Product(s)Linked toIllnesses(if any)\n",
-      "TotalCaseCount\n",
-      "InvestigationStatus\n",
-      "Outbreak/EventStatus\n",
-      "RecallInitiated\n",
-      "FDATracebackInitiated\n",
-      "FDAInspectionInitiated\n",
-      "FDASamplingInitiated\n",
-      "\n",
-      "   DatePosted Reference#                          PathogenorCause ofIllness  \\\n",
-      "0   11/8/2025       1350  Clostridium botulinum (Link: https://www.cdc.g...   \n",
-      "1  10/16/2025       1345  SalmonellaRichmond (Link: https://www.fda.gov/...   \n",
-      "2   9/17/2025       1339  SalmonellaLomalinda (Link: https://www.fda.gov...   \n",
-      "3   9/17/2025       1334  Listeriamonocytogenes (Link: https://www.fda.g...   \n",
-      "4    9/4/2025       1309  Listeriamonocytogenes (Link: https://www.fda.g...   \n",
-      "\n",
-      "  Product(s)Linked toIllnesses(if any)  \\\n",
-      "0                       Infant Formula   \n",
-      "1                  Moringa Leaf Powder   \n",
-      "2                   Not Yet Identified   \n",
-      "3                   Not Yet Identified   \n",
-      "4                   Not Yet Identified   \n",
-      "\n",
-      "                                      TotalCaseCount InvestigationStatus  \\\n",
-      "0  See Advisory (Link: https://www.fda.gov/food/o...              Active   \n",
-      "1  SeeAdvisory (Link: https://www.fda.gov/food/ou...              Active   \n",
-      "2                                                 40              Active   \n",
-      "3                                                  8              Active   \n",
-      "4                                                 26              Active   \n",
-      "\n",
-      "                                Outbreak/EventStatus  \\\n",
-      "0  OngoingSee Advisory (Link: https://www.fda.gov...   \n",
-      "1  OngoingSee Advisory (Link: https://www.fda.gov...   \n",
-      "2  EndedSeeAdvice (Link: https://www.fda.gov/food...   \n",
-      "3  EndedSee Advice (Link: https://wcms-internet.f...   \n",
-      "4  EndedSeeAdvice (Link: https://www.fda.gov/food...   \n",
-      "\n",
-      "                                     RecallInitiated FDATracebackInitiated  \\\n",
-      "0  See Advisory (Link: https://www.fda.gov/food/o...                     ✔   \n",
-      "1  SeeAdvisory (Link: https://www.fda.gov/food/ou...                     ✔   \n",
-      "2                                                                        ✔   \n",
-      "3                                                                        ✔   \n",
-      "4                                                                        ✔   \n",
-      "\n",
-      "  FDAInspectionInitiated FDASamplingInitiated  \n",
-      "0                      ✔                    ✔  \n",
-      "1                      ✔                    ✔  \n",
-      "2                      ✔                    ✔  \n",
-      "3                      ✔                    ✔  \n",
-      "4                                              \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Using the metadata to understand the data\n",
     "fda_wrangler.metadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a5b7898",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fda_wrangler._init_db()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c68d4590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fda_wrangler._insert_data()"
    ]
   }
  ],
